--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -15,6 +15,11 @@
         <a class="navbar-brand"href="/">Home</a>
       </div>
       <div>
+          <ul class="nav navbar-nav">
+              <li><a href="/empresas">Empresas</a></li>
+          </ul>
+      </div>
+      <div>
         <ul class="nav navbar-nav">
           <li><a href="/metodologias">Metodologias</a></li>
         </ul>
