--- a/src/main/resources/templates/empresas.hbs
+++ b/src/main/resources/templates/empresas.hbs
@@ -6,10 +6,10 @@
     <form action="/empresas" >
         <div class="row">
             <div class="col-md-10">
-                <input type="text" class="form-control" name="filtroNombre">
+                <input type="text" class="form-control" placeholder="Nombre de la empresa" name="filtroNombre">
             </div>
             <div class="col-md-2">
-                <input type="submit" class="form-control btn btn-default">
+                <input type="submit" class="form-control btn btn-default" value="Buscar">
             </div>
         </div>
     </form>
