-ultimas correcciones de la entrega anterior -ya se puede agregar un indicar por web pero le faltan las verificaciones

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -25,6 +25,11 @@
                 </ul>
             </div>
             <div>
+                <ul class="nav navbar-nav">
+                    <li><a href="/indicadores/nuevo">Agregar indicador</a></li>
+                </ul>
+            </div>
+            <div>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
