--- a/src/main/resources/templates/atributos.hbs
+++ b/src/main/resources/templates/atributos.hbs
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-12">
             <table class="table table-striped" >
-                <th>Nombre</th>
+                <th>Cuentas</th>
                 <th>Valor</th>
                 {{#cuentas}}
                 <tr>
@@ -14,6 +14,21 @@
                     <td>{{valor}}</td>
                 </tr>
                 {{/cuentas}}
+            </table>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <table class="table table-striped" >
+                <th>Indicadores</th>
+                <th>Valor</th>
+                {{#indicadores}}
+                <tr>
+                    <td>{{nombre}}</td>
+                    <td>{{valorString}}</td>
+                </tr>
+                {{/indicadores}}
             </table>
         </div>
     </div>
