--- a/src/main/resources/templates/login.hbs
+++ b/src/main/resources/templates/login.hbs
@@ -3,16 +3,18 @@
 {{/partial}}
 
 {{# partial "contenido" }}
-    <form action="/login" method="POST">
-        <div class="form-group">
-            <label for="username">Username:</label>
-            <input type="text" class="form-control" name="username">
-        </div>
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" class="form-control" name="password">
-        </div>
-        <button type="submit" class="btn btn-default">Login</button>
+    <form class="form-signin" action="/login" method="POST">
+        <h2 class="form-signin-heading">Please login</h2>
+        <label for="username">Username</label>
+        <input type="text" name="username" class="form-control" placeholder="Username" required autofocus>
+        <label for="password">Password</label>
+        <input type="password" name="password" class="form-control" placeholder="Password" required>
+        {{#if errorLogin}}
+            <div class="alert alert-danger" role="alert">
+                El username o el password son incorrectos.
+            </div>
+        {{/if}}
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
     </form>
 {{/partial}}
 
