--- a/src/main/resources/public/main.css
+++ b/src/main/resources/public/main.css
@@ -27,6 +27,9 @@ body {
   padding: 10px;
   font-size: 16px;
 }
+.form-signin .form-control:focus {
+  z-index: 2;
+}
 .form-signin input[type="text"],
 .form-signin input[type="password"]{
   margin-bottom: 10px;
