--- a/src/main/resources/templates/indicador-nuevo.hbs
+++ b/src/main/resources/templates/indicador-nuevo.hbs
@@ -8,15 +8,23 @@
     <form action="/indicadores" method="POST">
         <div class="form-group">
             <label for="nombre">Nombre:</label>
-            <input type="text" class="form-control" name="nombre">
+            <input type="text" class="form-control" name="nombre" required>
         </div>
 
         <div class="form-group">
             <label for="formula">Formula:</label>
-            <input type="text" class="form-control" name="formula">
+            <input type="text" class="form-control" name="formula" required>
         </div>
-
-        <input type="submit">
+        {{#if errorFormula}}
+            <div class="alert alert-danger" role="alert">
+                La formula esta mal escrita.
+            </div>
+        {{/if}}
+        <div class="form-group">
+            <div class="pull-right col-sm-3">
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Agregar</button>
+            </div>
+        </div>
     </form>
 {{/partial}}
 
