--- a/src/main/resources/templates/metodologias.hbs
+++ b/src/main/resources/templates/metodologias.hbs
@@ -3,7 +3,7 @@
 {{/partial}}
 
 {{# partial "contenido" }}
-    <form action="/empresas" >
+    <form action="/metodologias" >
         <div class="row">
             <div class="col-md-10">
                 <input type="text" class="form-control" placeholder="Nombre de la metodologia" name="filtroNombre">
@@ -16,11 +16,11 @@
 
     <div class="row">
         <div class="col-md-12">
-            <label>Empresas:</label>
+            <label>Metodologias:</label>
             <div class="list-group">
-                {{#empresas}}
-                <a href="/empresas/{{id}}/periodos" class="list-group-item">{{nombre}}</a>
-                {{/empresas}}
+                {{#metodologias}}
+                <a href="/metodologias/{{metodologia}}/empresas" class="list-group-item">{{nombre}}</a>
+                {{/metodologias}}
             </div>
         </div>
     </div>
