cambios para mostrar correctamente las metodologias y filtrado por usuario. Cambio para poder agregar sin error indicadores

--- a/src/main/resources/templates/metodologias.hbs
+++ b/src/main/resources/templates/metodologias.hbs
@@ -19,7 +19,7 @@
             <label>Metodologias:</label>
             <div class="list-group">
                 {{#metodologias}}
-                <a href="/metodologias/{{metodologia}}/empresas" class="list-group-item">{{nombre}}</a>
+                <a href="/metodologias/{{id}}/empresas" class="list-group-item">{{nombre}}</a>
                 {{/metodologias}}
             </div>
         </div>
