--- a/src/main/resources/public/main.css
+++ b/src/main/resources/public/main.css
@@ -1,17 +1,23 @@
 html {
   position: relative;
-  min-height: 100%;
+  height: 100%;
 }
 body {
-  margin-bottom: 60px;
+
+  height: 100%;
+}
+.wrapper {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  margin: 0 auto -55px; /* the bottom margin is the negative value of the footer's height */
 }
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
+  padding: 15px;
+  height: 55px;
 }
 .form-signin {
+  height: 100%;
   max-width: 360px;
   padding: 15px;
   margin: 0 auto;
