--- a/src/main/resources/templates/indicadores.hbs
+++ b/src/main/resources/templates/indicadores.hbs
@@ -4,7 +4,7 @@
 
 {{# partial "contenido" }}
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-10">
             <table class="table table-striped" >
                 <th>Indicadores</th>
                 <th>Formula</th>
@@ -16,6 +16,21 @@
                 {{/indicadores}}
             </table>
         </div>
+    </div>
+    <div>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1">Previous</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="/indicadores">1</a></li>
+                <li class="page-item"><a class="page-link" href="/indicadores?pagina=2">2</a></li>
+                <li class="page-item"><a class="page-link" href="/indicadores?pagina=3">3</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            </ul>
+        </nav>
     </div>
 {{/partial}}
 
