--- a/src/main/resources/public/main.css
+++ b/src/main/resources/public/main.css
@@ -3,8 +3,13 @@ html {
   height: 100%;
 }
 body {
-
   height: 100%;
+}
+.titulo-tabla,
+.titulo-tabla h2 {
+  padding: 15px;
+  margin-bottom: 100px;
+  margin-top: 2px;
 }
 .wrapper {
   min-height: 100%;
