ahora la app busca los indicadores en mongo

--- a/src/main/resources/templates/atributos.hbs
+++ b/src/main/resources/templates/atributos.hbs
@@ -31,7 +31,7 @@
         {{#indicadores}}
             <tr>
                 <td class="col-md-7">{{nombre}}</td>
-                <td class="col-md-5">{{valorString}}</td>
+                <td class="col-md-5">{{valor}}</td>
             </tr>
         {{/indicadores}}
 
