--- a/src/main/resources/templates/empresasPorMetodologia.hbs
+++ b/src/main/resources/templates/empresasPorMetodologia.hbs
@@ -2,7 +2,12 @@
     <title>Empresas Ordenadas por Metodologia</title>
     <script type="text/javascript" charset="utf-8">
         $(document).ready(function() {
-            $('#tablaEmpresas').DataTable();
+            var t = $('#tablaEmpresas').DataTable({"order": [],"searching": false});
+            t.on( 'order.dt search.dt', function () {
+       		 t.column(0, {search:'applied', order:'applied'}).nodes().each( function (cell, i) {
+            cell.innerHTML = i+1;
+       		 } );
+    		} ).draw();
         } );
     </script>
 {{/partial}}
@@ -18,12 +23,14 @@
     <table id="tablaEmpresas" class="display" cellspacing="0" width="100%" >
         <thead>
         <tr>
+			<th class="col-md-1">Ranking</th>
             <th class="col-md-7">Empresa (orden descendente de mejor a peor inversion)</th>
         </tr>
         </thead>
         <tbody>
         {{#empresas}}
             <tr>
+            	<td class="col-md-1"></td>
                 <td class="col-md-7">{{nombre}}</td>
             </tr>
         {{/empresas}}
