nombre de usuario visible en toda ventana si se logueo

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -37,6 +37,7 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     {{#if logueado}}
+                        <li> <a>Bienvenido {{username}}     </a> </li>
                         <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                     {{else}}
                         <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
